# CityFlow

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.rst  azure-pipelines.yml  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  flow.rst  index.rst  install.rst  introduction.rst  replay.rst  roadnet.rst  start.rst
examples/: config.json  config_1x1.json  config_1x2.json  config_3x3.json  roadnet.json  testcase_flow_1x1.json  testcase_flow_1x2.json  testcase_roadnet_1x1.json  testcase_roadnet_1x2.json  testcase_roadnet_3x3.json
frontend/: Point.js  README.md  app.py  download_replay.py  index.html  init.py  script.js  spinner.css  style.css
frontend/replay/: roadnet.json
frontend/templates/: index.html
src/: CMakeLists.txt  cityflow.cpp  simulator.cpp  test.cpp  test_archive.cpp
src/engine/: archive.cpp  archive.h  engine.cpp  engine.h
src/flow/: flow.cpp  flow.h  route.cpp  route.h
src/roadnet/: roadnet.cpp  roadnet.h  trafficlight.cpp  trafficlight.h
src/utility/: barrier.cpp  barrier.h  config.h  optionparser.h  utility.cpp  utility.h
src/vehicle/: lanechange.cpp  lanechange.h  router.cpp  router.h  vehicle.cpp  vehicle.h
tests/: CMakeLists.txt  test_api.py  test_archive.py
tests/azure-pipelines/: azure-pipelines.yml
tests/azure-pipelines/template/: build.yml  install_gtest.yml
tests/cpp/: basic_test.cpp
tests/python/: test_api.py  test_archive.py  test_osm_converter.py
tools/: generate_grid_scenario.py  generate_json_from_grid.py
tools/Converter/: atlanta_flow.json  atlanta_sumo.net.xml  converter.py  readme.md  sample_script.py
tools/converter/: converter_v2.py  osm2cityflow.py  readme.md
tools/debug/: CMakeLists.txt  simple_run.cpp
tools/generator/: generate_grid_scenario.py  readme.md
